syntax = "proto3";

package voltha;

// Convey a resource identifier
message ID {
    string id = 1;
}


// Logging verbosity level
enum LogLevel {
    DEBUG = 0;
    INFO = 1;
    WARNING = 2;
    ERROR = 3;
    CRITICAL = 4;
}

// Administrative State
enum AdminState {

    // The administrative state of the device is unknown
    AS_UNKNOWN = 0;

    // The device is pre-provisioned into Voltha, but not contacted by it
    AS_PREPROVISIONED = 1;

    // The device is enabled for activation and operation
    AS_ENABLED = 3;

    // The device is disabled and shall not perform its intended forwarding
    // functions other than being available for re-activation.
    AS_DISABLED = 2;
}

// Operational Status
enum OperStatus {

    // The status of the device is unknown at this point
    OS_UNKNOWN = 0;

    // The device has been discovered, but not yet activated
    OS_DISCOVERED = 1;

    // The device is being activated (booted, rebooted, upgraded, etc.)
    OS_ACTIVATING = 2;

    // Service impacting tests are being conducted
    OS_TESTING = 3;

    // The device is up and active
    OS_ACTIVE = 4;

    // The device has failed and cannot fulfill its intended role
    OS_FAILED = 5;
}

// Connectivity Status
enum ConnectStatus {

    // The device connectivity status is unknown
    CS_UNKNOWN = 0;

    // The device cannot be reached by Voltha
    CS_UNREACHABLE = 1;

    // There is live communication between device and Voltha
    CS_REACHABLE = 2;
}

